syntax = "proto3";
package account;

//protoc --go_out=plugins=grpc:./ account.proto
service AccountService {
  rpc GetAccount (GetAccountReq) returns (GetAccountReply) {}
}

message GetAccountReq {
  uint64 uid = 1;
}

message GetAccountReply {
  int32 error_code = 1;
  User user_info = 2;
}

message User {
  string name = 1;
  int32 age = 2;
}